<resources>
    <string name="app_name">Infusion</string>

    <!--界面标题-->
    <string name="string_title_main">U-2000输液监护</string>
    <string name="string_title_set">系统设置</string>
    <string name="string_title_about">关于我们</string>
    <string name="string_title_bed">床位管理</string>

    <!--设置界面-->
    <string name="string_set_sound">提示音</string>
    <string name="string_set_shark">震 动</string>
    <string name="string_sound_set">设置声音</string>
    <string name="string_shark_set">设置震动</string>
    <string name="string_fast_warning">滴速过快提示</string>
    <string name="string_slow_warning">滴速过慢提示</string>
    <string name="string_stop_warning">滴液停止提示</string>
    <string name="string_low_power_warning">低电量提示</string>
    <string name="string_set_edition">版本设置</string>
    <string name="string_set_bed">床位管理</string>
    <string name="string_set_server">服务器设置</string>
    <string name="string_back_to_main_activity">返回主界面</string>
    <string name="string_mode_select">模式选择</string>
    <string name="string_mode_standard">标准模式</string>
    <string name="string_mode_optional">自选模式</string>
    <string name="string_ip_address">IP地址:</string>
    <string name="string_edit_ip_address">请输入IP地址</string>
    <string name="string_port">端口号：</string>
    <string name="string_edit_port">请输入端口号</string>
    <string name="string_all">全部</string>
    <string name="string_cancel">取消</string>
    <string name="string_ok">确定</string>

    <!--首页-->
    <string name="app_quit">确定退出程序吗?</string>
    <string name="app_ok">退出</string>
    <string name="app_cancel">取消</string>
    <string name="app_retry_title">连接服务器失败</string>
    <string name="app_retry_action">重试</string>
    <string name="main_att_bed">关注床位</string>
    <string name="main_all_bed">全部床位</string>
    <string name="main_to_conn">正在连接...</string>

    <!--通知栏文字-->
    <string name="navi_title">输液监护</string>

    <!--首页弹窗-->
    <string name="device_num">设备号</string>
    <string name="bed_num">床位号</string>
    <string name="top_limit_speed">上限滴速</string>
    <string name="low_limit_speed">下限滴速</string>
    <string name="amount">总容量</string>
    <string name="speed_unit">滴/分钟</string>
    <string name="amount_unit">毫升(ml)</string>
    <string name="popup_title">床位参数设置</string>

    <!--首页列表-->
    <string name="bed_unit">%s床</string>
    <string name="total_unit">%sml</string>

    <!--关于我们-->
    <string name="string_version_code_title">版本号：</string>
    <string name="string_version_code_content">V1.1</string>
    <string name="string_publish_date_title">发布日期：</string>
    <string name="string_publish_date_content">2016-05-19</string>
    <string name="string_contact_information_title">联系方式：</string>
    <string name="string_contact_information_content">0571-88952736</string>
    <string name="string_email_address_title">邮箱地址：</string>
    <string name="string_email_address_content">zc@freer-hz.com</string>
    <string name="string_web_address_title">网址：</string>
    <string name="string_web_address_content">http:www.freer-hz.com</string>
    <string name="string_address_title">地址：</string>
    <string name="string_address_content">浙江省杭州市滨江区\n东信大道66号E座206室</string>
    <string name="string_consult_phone_number">咨询：0571-88952736</string>

    <string name="toast_no_net">网络未打开，请检查网络</string>
</resources>
