<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_mode_select"
        android:textColor="@color/white"
        android:textSize="@dimen/size_font_big"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btn_mode_standard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/string_mode_standard"/>

    <Button
        android:id="@+id/btn_mode_optional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/string_mode_optional"/>

    <Button
        android:id="@+id/btn_mode_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/string_cancel"/>

</LinearLayout>