<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        style="@style/AppBarLayoutStyle">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_about"
            app:navigationIcon="?homeAsUpIndicator"
            style="@style/ToolbarStyle"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/bg_about_us"/>

            <LinearLayout
                style="@style/ItemSetAct">
                <ImageView
                    style="@style/ImgvSetAct"
                    android:src="@drawable/icon_version_set"/>
                <TextView
                    style="@style/TvTitleSetAct"
                    android:text="@string/string_version_code_title"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_gravity="center_vertical"
                    android:text="@string/string_version_code_content"/>
            </LinearLayout>

            <View
                style="@style/SplitLine"/>

            <LinearLayout
                style="@style/ItemSetAct">
                <ImageView
                    style="@style/ImgvSetAct"
                    android:src="@drawable/icon_dis_date"/>
                <TextView
                    style="@style/TvTitleSetAct"
                    android:text="@string/string_publish_date_title"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_gravity="center_vertical"
                    android:text="@string/string_publish_date_content"/>
            </LinearLayout>

            <View
                style="@style/SplitLine"/>

            <LinearLayout
                style="@style/ItemSetAct">
                <ImageView
                    style="@style/ImgvSetAct"
                    android:src="@drawable/icon_contact_us"/>
                <TextView
                    style="@style/TvTitleSetAct"
                    android:text="@string/string_contact_information_title"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_gravity="center_vertical"
                    android:text="@string/string_contact_information_content"/>
            </LinearLayout>

            <View
                style="@style/SplitLine"/>

            <LinearLayout
                style="@style/ItemSetAct">
                <ImageView
                    style="@style/ImgvSetAct"
                    android:src="@drawable/icon_email"/>
                <TextView
                    style="@style/TvTitleSetAct"
                    android:text="@string/string_email_address_title"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_gravity="center_vertical"
                    android:text="@string/string_email_address_content"/>
            </LinearLayout>

            <View
                style="@style/SplitLine"/>

            <LinearLayout
                style="@style/ItemSetAct">
                <ImageView
                    style="@style/ImgvSetAct"
                    android:src="@drawable/icon_website"/>
                <TextView
                    style="@style/TvTitleSetAct"
                    android:text="@string/string_web_address_title"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_gravity="center_vertical"
                    android:text="@string/string_web_address_content"/>
            </LinearLayout>

            <View
                style="@style/SplitLine"/>

            <LinearLayout
                style="@style/ItemSetAct">
                <ImageView
                    style="@style/ImgvSetAct"
                    android:src="@drawable/icon_ip_address"/>
                <TextView
                    style="@style/TvTitleSetAct"
                    android:text="@string/string_address_title"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_gravity="center_vertical"
                    android:text="@string/string_address_content"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!--返回主界面按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/btn_call_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/string_consult_phone_number"
            android:textColor="@color/white"
            android:background="@drawable/select_round_btn_red"/>

    </LinearLayout>

</LinearLayout>