<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtv_set_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/size_font_big"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <!--滴速过快-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_fast_warning"
                android:textColor="@color/black"
                android:textSize="@dimen/size_font_normal"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_fast_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>

        <!--滴速过慢-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_slow_warning"
                android:textColor="@color/black"
                android:textSize="@dimen/size_font_normal"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_slow_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>

        <!--滴液停止-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_stop_warning"
                android:textColor="@color/black"
                android:textSize="@dimen/size_font_normal"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_stop_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>

        <!--电量过低-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_low_power_warning"
                android:textColor="@color/black"
                android:textSize="@dimen/size_font_normal"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_low_power_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_set_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/size_font_big"
            android:background="@drawable/select_round_btn_red"/>

    </LinearLayout>

</LinearLayout>