<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.Set.SetActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        style="@style/AppBarLayoutStyle">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_set"
            app:navigationIcon="?homeAsUpIndicator"
            style="@style/ToolbarStyle"/>
    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--最上面的图片-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_about_us"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray"/>

            <!--提示音设置按钮-->
            <LinearLayout
                android:id="@+id/linear_set_sound"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_sound"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_set_sound"
                    android:textSize="@dimen/size_font_normal"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray"/>

            <!--震动设置按钮-->
            <LinearLayout
                android:id="@+id/linear_set_shark"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_shark"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_set_shark"
                    android:textSize="@dimen/size_font_normal"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray"/>

            <!--版本设置按钮-->
            <LinearLayout
                android:id="@+id/linear_set_edition"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_set"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_set_edition"
                    android:textSize="@dimen/size_font_normal"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/txtv_set_edition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray"/>

            <!--床位管理按钮-->
            <LinearLayout
                android:id="@+id/linear_set_bed"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:gravity="center_vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_bed"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_set_bed"
                    android:textSize="@dimen/size_font_normal"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/txtv_set_bed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray"
                android:visibility="gone"/>

            <!--服务器设置按钮-->
            <LinearLayout
                android:id="@+id/linear_set_server"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:gravity="center_vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_server"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_set_server"
                    android:textSize="@dimen/size_font_normal"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/txtv_set_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
